--- a/css/styles.css
+++ b/css/styles.css
@@ -151,9 +151,14 @@ body {
     font-size: 14px;
     line-height: 1.7;
     color: #FFFFFF;
+    font-style: normal;
 }
-
+.address a{
+    color: #FFFFFF;
+    text-decoration: none;
+}
 .infolink a {
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
 }
+
