--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ body {
 }
 
 .info a {
-    color: var(--title-text-color);
+    color: var(--primary-text-color);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -150,6 +150,7 @@ body {
     font-size: 14px;
     line-height: 1.7;
     color: #FFFFFF;
+    font-style: normal;
 }
 
 .infolink a {
